--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: larvel-app
+    image: laravel-app
     container_name: app
     restart: unless-stopped
     tty: true
@@ -34,7 +34,7 @@ services:
   # Nginx Service
   webserver:
     image: nginx:alpine
-    container_name: larvel-nginx
+    container_name: laravel-nginx
     restart: unless-stopped
     tty: true
     ports:
