docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
     restart: unless-stopped
     tty: true
     working_dir: /var/www
-    ports:
-    - "9000:9000"
+    expose:
+    - "9000"
     volumes:
       - ./:/var/www
       - ./storage:/var/www/storage
@@ -46,4 +46,6 @@ services:
     volumes:
       - ./:/var/www
       - ./nginx:/etc/nginx/conf.d
+    links:
+      - app
  
