--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,7 +82,7 @@ jobs:
         id: web-task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: ${{ steps.download-task-def.outputs.task-definition }}
+          task-definition: task-definition.json
           container-name: ${{ secrets.ECS_NGINX_CONTAINER_NAME }}
           image: ${{ steps.build-image.outputs.webimage }}
 
