--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,7 +96,7 @@ jobs:
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: ${{ steps.app-task-def.outputs.task-definition }}
+          task-definition: ${{ steps.web-task-def.outputs.task-definition }}
           service: final
           cluster: saqib-cluster
           wait-for-service-stability: true
