--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,14 +75,13 @@ jobs:
       - name: Download task definition
         run: |
           aws ecs describe-task-definition --task-definition ${{ secrets.ECS_CONTAINER_DEFINITION }} \
-          --query taskDefinition > task-definition.json 
-        id: download-task-def
+          --query taskDefinition > task-definition.json
 
       - name: Fill in the new app image ID in the Amazon ECS task definition
         id: app-task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: ${{ steps.download-task-def.outputs.task-definition }}
+          task-definition: task-definition.json
           container-name: ${{ secrets.ECS_APP_CONTAINER_NAME }}
           image: ${{ steps.build-image.outputs.appimage }}
 
