--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,20 +56,15 @@ jobs:
           ECR_REPOSITORY: reponame
           IMAGE_TAG: latest
         run: |
-          docker-compose build
-          docker tag laravel-nginx:latest $ECR_REGISTRY/laravel-nginx:$IMAGE_TAG
-          docker tag laravel-app:latest $ECR_REGISTRY/laravel-app:$IMAGE_TAG
+          docker build -t $ECR_REGISTRY/laravel-nginx:$IMAGE_TAG .
           docker push $ECR_REGISTRY/laravel-nginx:$IMAGE_TAG
-          docker push $ECR_REGISTRY/laravel-app:$IMAGE_TAG
           echo "setting output values"
-          echo "::set-output name=appimage::$ECR_REGISTRY/laravel-app:$IMAGE_TAG"
           echo "::set-output name=webimage::$ECR_REGISTRY/laravel-nginx:$IMAGE_TAG"
 
       # Runs a single command using the runners shell
       - name: Print the image name
         run: |
           echo the images are
-          echo ${{ steps.build-image.outputs.appimage }}
           echo ${{ steps.build-image.outputs.webimage }}
 
       - name: Download task definition
@@ -77,19 +72,11 @@ jobs:
           aws ecs describe-task-definition --task-definition ${{ secrets.ECS_CONTAINER_DEFINITION }} \
           --query taskDefinition > task-definition.json
 
-      - name: Fill in the new app image ID in the Amazon ECS task definition
-        id: app-task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: task-definition.json
-          container-name: ${{ secrets.ECS_APP_CONTAINER_NAME }}
-          image: ${{ steps.build-image.outputs.appimage }}
-
       - name: Fill in the new nginx image ID in the Amazon ECS task definition
         id: web-task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: ${{ steps.app-task-def.outputs.task-definition }}
+          task-definition: task-definition.json
           container-name: ${{ secrets.ECS_NGINX_CONTAINER_NAME }}
           image: ${{ steps.build-image.outputs.webimage }} 
 
